@@ -104,6 +104,7 @@ SubVersion: $Id$
 	- [kevin] $1883: implemented execute_command in the DCOP interface
 	- [kevin] $1886: added turn_calculator_on command to the DCOP interface
 	- [kevin] $1889: adjust to libtifiles2 re-reversion to file names in glib filename charset
+	- [kevin] $1890: implemented widechar versions of Win32 file dialogs
 	
 	Note: trunk forked into tiemu-debugging-branch at rev. $983 and has been merged back 
 		into the trunk at rev. $1695.	
